# sheepdoge

./: .bazelrc  .gitignore  .pylintrc  .travis.yml  BUILD.bazel  Dockerfile.dev  LICENSE  Makefile  Pipfile  README.md  WORKSPACE  dev-requirements.in  main.py  release.sh  requirements.in  requirements.txt  setup.py  sheepdog_runner.py  sheepdoge_runner.py
docs/: Makefile  conf.py  creating_your_first_kennel.md  creating_your_first_pup.md  index.rst  sheepdog_up_and_running.md  sheepdoge_up_and_running.md
sheepdog/: __init__.py  action.py  app.py  cli.py  config.py  exception.py  kennel.py  pup.py  utils.py
sheepdog/action/: __init__.py  install.py  run.py
sheepdoge/: BUILD.bazel  __init__.py  app.py  cli.py  config.py  exception.py  kennel.py  pup.py  utils.py
sheepdoge/action/: BUILD.bazel  __init__.py  install.py  run.py
tests/integration/: run_integration_tests.sh
tests/integration/kennels/kennel-cron-bootstrap-sample/: README.md  kennel.cfg  kennel.yml  pupfile.yml
tests/integration/kennels/kennel-dependencies/: README.md  kennel.cfg  kennel.yml  pupfile.yml
tests/integration/kennels/kennel-external-pups/: README.md  kennel.cfg  kennel.yml  pupfile.yml
tests/integration/kennels/kennel-trivial-sample/: README.md  integration_test_vault_pass.txt  kennel.cfg  kennel.yml  pupfile.yml
tests/integration/kennels/kennel-update-kennel-before-cron-sample/: README.md
tests/unit/: BUILD.bazel  test_app.py  test_cli.py  test_config.py  test_kennel.py  test_pup.py
tests/unit/action/: BUILD.bazel  test_install.py  test_run.py
(+73 files in other folders)
